k8s/order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  namespace: stratoshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
  namespace: stratoshop
spec:
  selector:
    app: order-db
  ports:
  - port: 3306
    targetPort: 3306
