k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: stratoshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: lnr777/stratoshop-order-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: stratoshop
spec:
  selector:
    app: order-service
  ports:
  - port: 8083
    targetPort: 8083
