k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: stratoshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: lnr777/stratoshop-product-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: stratoshop
spec:
  selector:
    app: product-service
  ports:
  - port: 8082
    targetPort: 8082
